# comfoconnect-mqtt-bridge

./: Dockerfile  LICENSE  README.md  main.py  mqtt.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
comfobridge/: __main__.py  measurement.py  mqtt.py  reporting.py  ventilation.py
comfoconnect-mqtt-bridge/: ventilation.py
