[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comfoconnect-mqtt-bridge"
version = "0.0.1"
authors = [
  { name="Øystein Gisnås", email="oystein@gisnas.net" },
]
description = "Bridge for communicating between a Zehnder Comfoair Q350/450/600 ventilation system and MQTT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/oysteing/comfoconnect-mqtt-bridge"
"Bug Tracker" = "https://github.com/oysteing/comfoconnect-mqtt-bridge/issues"